<resources>
    <string name="app_name">LiveScore</string>
    <string name="phmeci">PHMeci</string>
    <string name="phdata">PHData</string>
    <string name="phteam1">PHTeam1</string>
    <string name="phteam2">PHTeam2</string>
    <string name="meci_id">Meci id</string>
    <string name="team_name">Team name</string>
    <string name="minut">Minut</string>
    <string name="nume_antrenor">Nume Antrenor</string>
    <string name="nume_echipa">Nume Echipa</string>
    <string name="id_echipa">Id Echipa</string>
    <string name="data_meci">data meci</string>
    <string name="stadion_meci">Stadion meci</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="adauga_in_db">Adauga In DB</string>
    <string name="afiseazameciuri">AfiseazaMeciuri</string>
    <string name="adauga_echipa">Adauga Echipa</string>
    <string name="images">Images</string>
    <string name="adauga_meci">Adauga Meci</string>
    <string name="json">JSON</string>
    <string name="adauga_gol">Adauga Gol</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="load_image">Load Image</string>
    <string name="id_meci">Id meci</string>
    <string name="nume_echipa_3_litere">Nume Echipa (3 litere)</string>
    <string name="nume_jucator">Nume Jucator</string>
    <string name="minut_inscriere">Minut Inscriere</string>
    <string name="salveaza_gol">Salveaza Gol</string>
    <string name="afiseaza_goluri">Afiseaza Goluri</string>
    <string name="acronim_tara">Acronim Tara</string>
    <string name="adauga_echipa_la_db">Adauga Echipa la DB</string>
    <string name="afisare_echipe_prezente">Afisare Echipe Prezente</string>
    <string name="transfer_valoare">Transfer valoare</string>
    <string name="to_transfer_activity">To Transfer activity</string>
    <string name="placeholder">Placeholder</string>
    <string name="sterge_dupa_id">Sterge dupa id</string>
    <string name="id_gol">Id gol</string>
    <string name="gol_id">Gol Id</string>
    <string name="_2d_graph">2D Graph</string>
</resources>