<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitati.AdaugareGolActivity">

    <EditText
        android:id="@+id/idMeciGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/id_meci"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/goalTeamname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/goalTeamname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nume_echipa_3_litere"
        app:layout_constraintBottom_toTopOf="@+id/numeJucatorMarcant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/numeJucatorMarcant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nume_jucator"
        app:layout_constraintBottom_toTopOf="@+id/minutulInscrierii"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/minutulInscrierii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/minut_inscriere"
        app:layout_constraintBottom_toTopOf="@+id/salvareGol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/salvareGol"
        android:layout_width="165dp"
        android:layout_height="49dp"
        android:text="@string/salveaza_gol"
        app:layout_constraintBottom_toTopOf="@+id/afiseazaGoluri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/afiseazaGoluri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/afiseaza_goluri"
        app:layout_constraintBottom_toTopOf="@+id/stergeGol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stergeGol"
        android:layout_width="167dp"
        android:layout_height="45dp"
        android:text="@string/sterge_dupa_id"
        app:layout_constraintBottom_toTopOf="@+id/modificaGol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/idGol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/id_gol"
        app:layout_constraintBottom_toTopOf="@+id/idMeciGoal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/modificaGol"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:text="Modifica Gol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>