<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/golId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/gol_id"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="12dp" />

    <TextView
        android:id="@+id/meciGolid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/meci_id"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="12dp" />

    <TextView
        android:id="@+id/golTeamname"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/team_name"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="12dp" />

    <TextView
        android:id="@+id/golPlayer"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Player"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="12dp" />

    <TextView
        android:id="@+id/golMinute"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/minut"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="12dp" />
</LinearLayout>